@@ -234,7 +234,7 @@ typedef enum _processor_cycle_type _processor_cycle_type;
 #ifndef EIS_PTR4
 //! some breakpoint stuff ...
 enum eMemoryAccessType {
-    Unknown          = 0,
+    UnknownMAT       = 0,
     InstructionFetch,
     IndirectRead,
     //IndirectWrite,
@@ -275,11 +275,15 @@ typedef enum eMemoryAccessType MemoryAccessType;
 #define GET_TALLY(src) (((src) >> 6) & MASK12)   // 12-bits
 #define GET_DELTA(src)  ((src) & MASK6)           // 6-bits
 
+#ifndef max
 #define max(a,b)    max2((a),(b))
+#endif
 #define max2(a,b)   ((a) > (b) ? (a) : (b))
 #define max3(a,b,c) max((a), max((b),(c)))
 
+#ifndef min
 #define min(a,b)    min2((a),(b))
+#endif
 #define min2(a,b)   ((a) < (b) ? (a) : (b))
 #define min3(a,b,c) min((a), min((b),(c)))
 
